--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.1'
 services:
   postgres:
-    container_name: url_dbx`
+    container_name: url_db
     image: postgres:latest
     ports:
       - 5432:5432
