--- a/url-service/cmd/api/v1/.env
+++ b/url-service/cmd/api/v1/.env
@@ -8,6 +8,6 @@ REDIS_HOST="localhost"
 REDIS_PORT="6379"
 REDIS_DB="0"
 REDIS_KEY="urls"
-HOST="127.0.0.1"
+HOST="localhost"
 PORT="8080"
 KAFKA_TOPIC="url-service"
